--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                    placeholder="输入用户名"  name="userAccount" id="userAccount" value=""/>
         </div>
         <div class="lgD">
-            <input type="password" placeholder="输入用户密码" name="userPwd" id="userPwd"/>
+            <input type="password" placeholder="输入用户密码" name="userPwd" id="userPwd  "/>
             <span ></span>
         </div>
         <div class="logC">
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="/static/js/test.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
 
 </body>
 </html>
