--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="applicable-device" content="pc">
 
-    <title>测试用的</title>
+    <title>ddsfdsfdsfds</title>
     <meta name="description" content="整合所有资源"/>
     <meta name="keywords" content="寻屋"/>
     <link href="/static/css/index.css" rel='stylesheet' type='text/css'/>
