--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,23 +3,31 @@ div#authorization_box,div#auth_confirm {
     overflow:hidden;
 }
 
-body {background-color: #ded380;}
+.wapper {
+    width:100%;
+    height:100%;
+}
+.left-background {
+    /*background-color: #ded380;*/
+    background: url(/static/image/1.png)no-repeat;
+    width:80%;
+    height:100%;
+    background-size:100% 100%;
+    display:inline;
+    float:left
+}
 
-#wrap {
-    text-align:center;
-    border: 25px solid green;
-    position:fixed;
-    z-index:9999;
-    top:50%;
-    left:50%;
-    width:250px; /* 按需改变数值 */
-    height:150px; /* 按需改变数值 */
-    margin-top:-75px; /* height数值的一半 */
-    margin-left:-125px; /* width数值的一半 */
-    box-shadow:0 0 3px rgba(0,0,0,.2);
-    background:#fff;
-    padding:10px;
+.rigth-login-wapper {
+    width:20%;
+    height:100%;
+    display:inline;
+    float:left;
+}
 
-    -webkit-box-shadow:0 0 3px rgba(0, 0, 0, 0.85);
-    -moz-box-shadow:0 0 3px rgba(0,0,0,.2);
+.login {
+    position: relative;
+    top: 50%;
+
+    width: 100px;
+    height: 100px;
 }
