--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,30 +8,35 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="applicable-device" content="pc">
 
-    <title>ddsfdsfdsfds</title>
+    <title>登录</title>
     <meta name="description" content="整合所有资源"/>
     <meta name="keywords" content="寻屋"/>
     <link href="/static/css/index.css" rel='stylesheet' type='text/css'/>
 
 </head>
 <body>
-<div class="wrap" id="wrap">
-    <div class="logGet">
-        <!-- 头部提示信息 -->
-        <div class="logD logDtip">
-            <p class="p1">登录</p>
-        </div>
-        <!-- 输入框 -->
-        <div class="lgD">
-            <input type="text"
-                   placeholder="输入用户名"  name="userAccount" id="userAccount" value=""/>
-        </div>
-        <div class="lgD">
-            <input type="password" placeholder="输入用户密码" name="userPwd" id="userPwd  "/>
-            <span ></span>
-        </div>
-        <div class="logC">
-            <a href="#" id="loginButton"><button>登 录</button></a>
+<div class="wapper">
+    <div class="left-background">
+    </div>
+
+    <div class="rigth-login-wapper">
+        <div class="login">
+            <!-- 头部提示信息 -->
+            <div class="logD logDtip">
+                登录
+            </div>
+            <!-- 输入框 -->
+            <div class="lgD">
+                <input type="text"
+                       placeholder="输入用户名"  name="userAccount" id="userAccount" value=""/>
+            </div>
+
+            <div class="lgD">
+                <input type="password" placeholder="输入用户密码" name="userPwd" id="userPwd  "/>
+            </div>
+            <div class="logC">
+                <a href="#" id="loginButton"><button id="submit">登 录</button></a>
+            </div>
         </div>
     </div>
 </div>
